manifests/cluster-addons/ollama/templates/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ollama
  namespace: ollama
spec:
  endpointSelector: {}
  ingress: []
